Trying to add the js files

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,27 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+src/js/node_modules
+src/js/.pnp
+src/js/.pnp.js
+
+# testing
+src/js/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+src/js/npm-debug.log*
+src/js/yarn-debug.log*
+src/js/yarn-error.log*
